# Hierarchical-RL-agent-for-Efficient-Desktop-Control

./: .env.example  CUDA_INSTALLATION.md  DEMO_GUIDE.md  DOCKER_FIXED.md  IMPLEMENTATION_SUMMARY.md  INSTALL_FIXED.md  MODELS_DOWNLOAD.md  Makefile  NEXT_STEPS.md  OSWORLD_UPDATED.md  QUICKSTART.md  README.md  SETUP_UPGRADED.md  TRAINING_HANG_FIX.md  TRAINING_IMPROVEMENTS.md  UPGRADE_COMPLETE.md  UPGRADE_SUMMARY.md  demo.py  examples.py  install_cuda.sh  main.py  pyproject.toml  test_setup.py
config/: config.yaml  tasks.json
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: API.md  PROJECT_STRUCTURE.md  TRAINING.md
logs/: events.out.tfevents.1764237450.HP-Z2-Tower-G9-Workstation-Desktop-PC.99945.0  events.out.tfevents.1764237558.HP-Z2-Tower-G9-Workstation-Desktop-PC.102004.0  events.out.tfevents.1764237626.HP-Z2-Tower-G9-Workstation-Desktop-PC.103259.0  events.out.tfevents.1764237706.HP-Z2-Tower-G9-Workstation-Desktop-PC.104948.0  events.out.tfevents.1764237861.HP-Z2-Tower-G9-Workstation-Desktop-PC.108030.0  events.out.tfevents.1764238256.HP-Z2-Tower-G9-Workstation-Desktop-PC.115092.0
scripts/: complete_setup.sh  download_models.py  install_osworld.sh  install_window_tools.sh  run_api.sh  setup_osworld.sh  train.sh  verify_setup.sh  verify_upgrade.sh
src/: __init__.py
src/agent/: __init__.py  encoder.py  encoder_old.py  manager.py  policy.py  worker.py
src/api/: __init__.py  config.py  main.py  models.py  routes.py
src/environment/: __init__.py  base_env.py  osworld_integration.py  osworld_wrapper.py  screenshot.py
src/training/: __init__.py  curriculum.py  ppo_trainer.py  replay_buffer.py  train.py
src/utils/: __init__.py  logger.py  metrics.py  metrics_simple.py  visualizer.py
tests/: test_agent.py
train_results/: results_from_cloud.txt
