[project]
name = "hierarchical-rl-agent-for-efficient-os-control"
version = "0.1.0"
description = "Hierarchical Reinforcement Learning Agent for Efficient OS Control - FastAPI Microservice"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # Core Framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    
    # Deep Learning - More Powerful Models
    "torch",
    "torchvision",
    "transformers",
    "timm",
    "openai",
    "clip @ git+https://github.com/openai/CLIP.git",
    
    # Reinforcement Learning
    "gymnasium",
    "stable-baselines3",
    "tensorboard",
    
    # OSWorld Integration
    "osworld @ git+https://github.com/xlang-ai/OSWorld.git",
    "docker",
    "requests",
    
    # Computer Control
    "pyautogui",
    "mss",
    "pillow",
    "opencv-python",
    "pynput",
    
    # GUI Visualization for Training
    "pygame",
    "matplotlib",
    
    # Utilities
    "numpy",
    "pandas",
    "pyyaml",
    "python-dotenv",
    "loguru",
    "httpx",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
